# tadpole

./: .gitignore  .merlin  .ocamlformat  Makefile  README.md  _tags  dune  dune-project  i32.wast  ocamlformat  tadpole.opam
jsoo/: dune  jsoo.ml
lib/: dune  eval.ml  evalNum.ml  evaluator.ml  leb128.ml  nfloat32.ml  nfloat64.ml  nint32.ml  nint64.ml  types.ml  validator.ml  wasmParser.ml  wasmPrinter.ml  wasmScanner.ml  watDatum.ml  watParser.ml  watPrettyPrinter.ml  watPrinter.ml  watScanner.ml  watToken.ml
src/: alloc.ml  ast.ml  cliCommon.ml  datum.ml  env.ml  eval.ml  evalNum.ml  evaluator.ml  evalx.ml  float32.ml  float64.ml  main.ml  nfloat32.ml  nfloat64.ml  nint32.ml  nint64.ml  parser.ml  run.ml  runtime.ml  structure.ml  t.ml  token.ml  types.ml  uint32.ml  validator.ml  wa.ml  wasm.ml  wasmPrinter.ml  wasmScanner.ml  wat.ml  watPrinter.ml  watScanner.ml  watToken.ml
test/: dune  test.ml
test/case/: LICENSE  README.md  factorial.wat  simple.wat  stuff.wat
