opam-version: "2.0"

version: "1.0"
name: "tadpole"
synopsis: "WASM/WAT toolkit"
license: "MIT"
homepage: "https://github.com/dhcmrlchtdj/tadpole"
bug-reports: "https://github.com/dhcmrlchtdj/tadpole/issues"
dev-repo: "git+https://github.com/dhcmrlchtdj/tadpole"
authors: "h11 <nirisix@gmail.com>"
maintainer: "h11 <nirisix@gmail.com>"

depends: [
    "containers"
    "js_of_ocaml" {build}
    "js_of_ocaml-compiler" {build}
    "js_of_ocaml-ppx" {build}
    "ppx_deriving" {build}
    "dune" {build}
    "alcotest" {dev}
    "ocamlformat" {dev}
]

build: [
    ["dune" "build" "@install" "-p" name "-j" jobs]
]
